[project]
name = "western-lx-nnr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.2.4",
    "duckdb>=1.5.2",
    "fuzzywuzzy>=0.18.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "pyproj>=3.7.1",
    "scipy>=1.15.3",
    "setuptools>=80.10.2",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "xlrd>=2.0.2",
]
